# ptbr-llm

./: .gitignore  ANALISE_CLASSES_E_CONEXOES.md  ARQUITETURA.md  ASSET_BUILD_LOG.md  Cargo.toml  FINAL_INTEGRATION_REPORT.md  GIT_COMMIT.md  GIT_SETUP.md  KAGGLE_ATUALIZADO.md  KAGGLE_CHECKLIST.md  KAGGLE_DEBUG_CRASH.md  KAGGLE_DEBUG_FORWARD.md  KAGGLE_DEBUG_TRAIN_STEP.md  KAGGLE_NOTEBOOK_COMPLETO.md  KAGGLE_NOTEBOOK_CORRETO.md  KAGGLE_NOTEBOOK_FIX.md  KAGGLE_QUICK_START.md  KAGGLE_SUCESSO.md  PROGRESSO_FASES.md  PROJETO_COMPLETO.md  README.md  RESUMO_FINAL.md  RESUMO_KAGGLE.md  RESUMO_REVISAO.md  REVISAO_COMPLETA.md  SCALE_UP_1B.md  audit_all.tsv  audit_lei_sample.tsv  build_test_cpu.ps1  build_test_cpu.sh  check_vram_requirements.sh  cleaning_test_output.txt  kaggle_setup.sh  quality_report.txt  relatorio_final.txt  remaining_issues_report.txt  repetition_report.txt  verify_result.txt
.cargo/: config.toml
config/: multi_domain_tokens.json
configs/: model_400m.toml
cuda/: build.sh  wkv_cuda.cu
docs/: ANALISE_QUALIDADE_CORPUS_v16.md  ARQUITETURA.md  AUDITORIA_COMPLETA.md  AUDITORIA_TXT_COMPLETA_v16.md  INVENTARIO_TXT_VISUAL.txt  MUDANCAS_v1.0.md  RESUMO_EXECUTIVO_v16.md
local-patches/burn-autodiff/: Cargo.toml
local-patches/burn-autodiff/src/: lib.rs
scripts/: analyze_remaining_issues.py  analyze_repetitions.py  analyze_tokenizer.py  benchmark_tokenizer.py  biopsy_files.py  build_assets_fast.py  build_assets_robust.py  build_corpus_v15_stream.py  build_corpus_v15_v2_clean.py  build_dataset_v17.py  check_data_quality.py  clean_sources_v15.py  clean_sovereign.py  clean_tokenizer_input.py  debug_encoding.py  debug_tokenizer.py  decode_tokens.py  download_all.py  download_dataset.py  download_from_hf.py  dump_source.ps1  dump_source_v2.ps1  example_dynamic_tokenizer.py  extract_chroma.py  filter_v11_brasil_only.py  filter_v12_ultra_clean.py  filter_v13_keep_more.py  fix_mojibake.py  inspect_dataset.py  planalto_codigo_civil_v3.py  planalto_resolve_codigo_civil.py  repair_encoding.py  resume_optimized.py  scrape_planalto_fix_frames.py  summarize_content.py  test_cleaning.py  tokenize_fast_draft.py  train_fast_tokenizer.py  unify_corpus.py  upload_bootstrap.py  (+2 more)
scripts/legacy/: analyze_all_files.py  analyze_content_quality.py  analyze_sections.py  audit_sources_v15.py  clean_all_txts.py  deep_analysis.py  deep_validate_sample.py  example_dynamic_tokenizer.py  execute_cleanup_plan.py  exemplos_multi_domain.py  filter_v12_ultra_clean.py  filter_v14_quick_clean.py  fix_newlines_to_lf.py  inspect_tokenizer.py  planalto_codigo_civil_v3.py  planalto_resolve_codigo_civil.py  planalto_resolve_codigo_civil_v2.py  quick_validate.py  restore_data.py  scrape_planalto_fix_frames.py  scrape_planalto_seeds.py  scrape_planalto_seeds_v2.py  smart_analyze.py  surgical_clean.py  train_multi_domain_tokenizers.py  validate_all_sources.py
skills/: rust_patterns.md
src/: backend.rs  error.rs  helpers.rs  lib.rs  main.rs
src/commands/: audit.rs  benchmark.rs  build_dataset.rs  clean_corpus.rs  find_lr.rs  generate.rs  info.rs  mod.rs  process_wiki.rs  resume.rs  test_gpu.rs  test_model.rs  tokenize.rs  train.rs  train_tokenizer.rs
src/data/: cleaner.rs  dataset.rs  mod.rs  wiki_parser.rs
src/logger/: metrics.rs  mod.rs
src/model/: adapters.rs  checkpoint.rs  config.rs  evaluator.rs  lr_finder.rs  mod.rs  precision.rs  rwkv.rs  rwkv_v7.rs  trainer.rs  traits.rs  validation.rs  wkv_cuda_ffi.rs  wkv_optimized.rs  wkv_v7.rs
src/tokenizer/: bpe.rs  mod.rs  normalize.rs
src/utils/: data_audit.rs  data_purge.rs  format.rs  mod.rs  vocab_pilot.rs
tests/: dataset_test.rs  model_test.rs  tokenizer_test.rs  training_smoke_test.rs
tests/common/: mod.rs
