[package]
name = "ptbr-slm"
version = "1.0.0"
edition = "2021"
authors = ["Caike Machado Batista Costa"]
description = "RWKV Language Model para Português Brasileiro"

[features]
default = ["cpu"]
cpu = ["burn/ndarray"]
gpu = ["burn/wgpu"]
cuda = ["burn/cuda-jit"]

[dependencies]
# Burn ML Framework
burn = { version = "0.14", default-features = false, features = ["autodiff", "train"] }

# Serialização
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IO e Memória
memmap2 = "0.9"
quick-xml = "0.31"
bzip2 = "0.4"

# Texto
regex = "1.10"
once_cell = "1.19"
unicode-normalization = "0.1"

# Concorrência
crossbeam-channel = "0.5"
rayon = "1.10"

# Randomização
rand = "0.8"
rand_chacha = "0.3"

# CLI e Logging
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1